apps/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: docker.io/ariesbabu/app-source:v1.0.1 # {"$imagepolicy": "flux-system:my-app"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests: {cpu: 100m, memory: 128Mi}
            limits: {cpu: 500m, memory: 256Mi}
          livenessProbe:
            httpGet: {path: /health, port: 8000}
            initialDelaySeconds: 10
          readinessProbe:
            httpGet: {path: /health, port: 8000}
            initialDelaySeconds: 5
